customer services finished